--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
                     <a href="https://disk.yandex.ru/i/24-J2_OqnlICoA">Посмотреть задание финала.</a>
                   </p>
                   <a href="https://docs.google.com/spreadsheets/d/1VvNcxJNWejWuK_XstZBFyofV-BZQsVVa6Op9Mhh-Wpo/edit?gid=92216861#gid=92216861">Результаты.</a>
-                  <p>После подведения итогов финала занял 5-ое место и не поехал на финал.</p>
-                  <strong>Оценка мероприятия: 100/100</strong>
+                  <p>После подведения итогов финала занял 5-ое место и не поехал на финал.Немного снял так как не понравилось итоговое задание.</p>
+                  <strong>Оценка мероприятия: 95/100</strong>
                 </div>
               </li>
             
@@ -341,7 +341,7 @@
                   <a href="https://rostelecomchampion.ru/">Подробнее о мероприятии</a>
                   <p>Был участником в номинации "Кибербезопасность"</p>
                   <p>Участвовал вне конкурса, так как старшие преподаватели были экспертами и разрабатывали задания.</p>
-                  <strong>Оценка мероприятия: 85/100</strong>
+                  <strong>Оценка мероприятия: 100/100</strong>
                 </div>
               </li>
             
